Enabling client side validation breaks numeric textbox on post back

--- a/MvcKendoNumericTextBox/Views/Home/Create.cshtml
+++ b/MvcKendoNumericTextBox/Views/Home/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model MvcKendoNumericTextBox.Models.Person
 @{
     ViewBag.Title = "Index";
+    Html.EnableClientValidation(false);
 }
 
 <h2>Index</h2>
