--- a/MvcKendoNumericTextBox/Views/Shared/_Layout.cshtml
+++ b/MvcKendoNumericTextBox/Views/Shared/_Layout.cshtml
@@ -37,6 +37,8 @@
     </div>
 
     <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src=" http://cdn.kendostatic.com/2015.2.902/js/kendo.web.min.js"></script>
     @RenderSection("scripts", false)
