--- a/MvcKendoNumericTextBox/Views/Home/Index.cshtml
+++ b/MvcKendoNumericTextBox/Views/Home/Index.cshtml
@@ -7,7 +7,9 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create with client validation (not working)", "Create")
+    <br/>
+    @Html.ActionLink("Create without client validation (working) ", "CreateNoValidation")
 </p>
 <table class="table">
     <tr>
@@ -17,7 +19,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Age)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -27,11 +28,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
