Fixed controller name in index

--- a/MvcKendoNumericTextBox/Views/Home/Index.cshtml
+++ b/MvcKendoNumericTextBox/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create with client validation (not working)", "Create")
     <br/>
-    @Html.ActionLink("Create without client validation (working) ", "CreateNoValidation")
+    @Html.ActionLink("Create without client validation (working) ", "CreateWorking")
 </p>
 <table class="table">
     <tr>
